--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="spam.png">
+
+<!-- Open Graph Meta Tags for WhatsApp -->
+    <meta property="og:title" content="Spam Email Detector">
+    <meta property="og:description" content="AI-powered tool that detects and filters spam emails to keep your inbox clean and secure.">
+    <meta property="og:image" content="spam.png">
+    <meta property="og:url" content="https://siddharth192006.github.io/Spam-email-detector/">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <div class="container">
