--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Open Graph Meta Tags for WhatsApp -->
     <meta property="og:title" content="Spam Email Detector">
     <meta property="og:description" content="AI-powered tool that detects and filters spam emails to keep your inbox clean and secure.">
-    <meta property="og:image" content="spam.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/siddharth192006/Spam-email-detector/677ea82b85378a39f3bcbd6f4262e76017813fac/spam.png">
     <meta property="og:url" content="https://siddharth192006.github.io/Spam-email-detector/">
     <meta property="og:type" content="website">
 </head>
